--- a/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
@@ -1,3 +1,20 @@
 {
-  "item.horde-resource-crops.other.catalyst": "Catalyst"
+  "item.horde-resource-crops.other.catalyst": "Catalyst",
+  "item.horde-resource-crops.other.bloodstone": "Bloodstone",
+  "item.horde-resource-crops.other.rhodonite": "Rhodonite",
+  "item.horde-resource-crops.other.aventurine": "Aventurine",
+  "item.horde-resource-crops.other.aragonite": "Aragonite",
+  "item.horde-resource-crops.other.spinel": "Spinel",
+  "item.horde-resource-crops.other.larimar": "Larimar",
+  "item.horde-resource-crops.other.chaorite": "Chaorite",
+  "item.horde-resource-crops.other.shard_dragon_egg": "Dragon Egg Shard",
+  "item.horde-resource-crops.other.shard_nether_star": "Nether Star Shard",
+  "item.horde-resource-crops.dragonstone_overworld": "Dragonstone",
+  "item.horde-resource-crops.raw_dragonstone_overworld": "Raw Dragonstone",
+  "item.horde-resource-crops.raw_dragonstone_deepslate": "Raw Dragonstone",
+  "item.horde-resource-crops.dragonstone_nether": "Dragonstone",
+  "item.horde-resource-crops.raw_dragonstone_nether": "Raw Dragonstone",
+  "item.horde-resource-crops.dragonstone_end": "Dragonstone",
+  "item.horde-resource-crops.raw_dragonstone_end": "Raw Dragonstone",
+  "item.horde-resource-crops.vanilla.essence_rhodonite": "Raw Dragonstone"
 }
