--- a/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
@@ -16,5 +16,99 @@
   "item.horde-resource-crops.raw_dragonstone_nether": "Raw Dragonstone",
   "item.horde-resource-crops.dragonstone_end": "Dragonstone",
   "item.horde-resource-crops.raw_dragonstone_end": "Raw Dragonstone",
-  "item.horde-resource-crops.vanilla.essence_rhodonite": "Raw Dragonstone"
+  "item.horde-resource-crops.vanilla.essence_rhodonite": "Raw Dragonstone",
+  "item.horde-resource-crops.vanilla.essence_air": "Air Essence",
+  "item.horde-resource-crops.vanilla.essence_earth": "Earth Essence",
+  "item.horde-resource-crops.vanilla.essence_fire": "Fire Essence",
+  "item.horde-resource-crops.vanilla.essence_water": "Water Essence",
+  "item.horde-resource-crops.vanilla.essence_dirt": "Dirt Essence",
+  "item.horde-resource-crops.vanilla.essence_ice": "Ice Essence",
+  "item.horde-resource-crops.vanilla.essence_stone": "Stone Essence",
+  "item.horde-resource-crops.vanilla.essence_amethyst": "Amethyst Essence",
+  "item.horde-resource-crops.vanilla.essence_chicken": "Chicken Essence",
+  "item.horde-resource-crops.vanilla.essence_coal": "Coal Essence",
+  "item.horde-resource-crops.vanilla.essence_copper": "Copper Essence",
+  "item.horde-resource-crops.vanilla.essence_cow": "Cow Essence",
+  "item.horde-resource-crops.vanilla.essence_fish": "Fish Essence",
+  "item.horde-resource-crops.vanilla.essence_iron": "Iron Essence",
+  "item.horde-resource-crops.vanilla.essence_pig": "Pig Essence",
+  "item.horde-resource-crops.vanilla.essence_coral": "Coral Essence",
+  "item.horde-resource-crops.vanilla.essence_creeper": "Creeper Essence",
+  "item.horde-resource-crops.vanilla.essence_honey": "Honey Essence",
+  "item.horde-resource-crops.vanilla.essence_lapis": "Lapis Lazuli Essence",
+  "item.horde-resource-crops.vanilla.essence_rabbit": "Rabbit Essence",
+  "item.horde-resource-crops.vanilla.essence_sheep": "Sheep Essence",
+  "item.horde-resource-crops.vanilla.essence_skeleton": "Skeleton Essence",
+  "item.horde-resource-crops.vanilla.essence_slime": "Slime Essence",
+  "item.horde-resource-crops.vanilla.essence_spider": "Spider Essence",
+  "item.horde-resource-crops.vanilla.essence_squid": "Squid Essence",
+  "item.horde-resource-crops.vanilla.essence_turtle": "Turtle Essence",
+  "item.horde-resource-crops.vanilla.essence_zombie": "Zombie Essence",
+  "item.horde-resource-crops.vanilla.essence_dye": "Dye Essence",
+  "item.horde-resource-crops.vanilla.essence_emerald": "Emerald Essence",
+  "item.horde-resource-crops.vanilla.essence_enderman": "Enderman Essence",
+  "item.horde-resource-crops.vanilla.essence_experience": "Experience Essence",
+  "item.horde-resource-crops.vanilla.essence_gold": "Gold Essence",
+  "item.horde-resource-crops.vanilla.essence_nature": "Nature Essence",
+  "item.horde-resource-crops.vanilla.essence_obsidian": "Obsidian Essence",
+  "item.horde-resource-crops.vanilla.essence_prismarine": "Prismarine Essence",
+  "item.horde-resource-crops.vanilla.essence_redstone": "Redstone Essence",
+  "item.horde-resource-crops.vanilla.essence_blaze": "Blaze Essence",
+  "item.horde-resource-crops.vanilla.essence_diamond": "Diamond Essence",
+  "item.horde-resource-crops.vanilla.essence_end": "End Essence",
+  "item.horde-resource-crops.vanilla.essence_ghast": "Ghast Essence",
+  "item.horde-resource-crops.vanilla.essence_glowstone": "Glowstone Essence",
+  "item.horde-resource-crops.vanilla.essence_nether": "Nether Essence",
+  "item.horde-resource-crops.vanilla.essence_wither_skeleton": "Wither Skeleton Essence",
+  "item.horde-resource-crops.vanilla.essence_dragon_egg": "Dragon Egg Essence",
+  "item.horde-resource-crops.vanilla.essence_nether_star": "Nether_Star Essence",
+  "item.horde-resource-crops.vanilla.essence_netherite": "Netherite Essence",
+  "item.horde-resource-crops.vanilla.essence_shulker": "Shulker Essence",
+  "item.horde-resource-crops.vanilla.seed_air": "Air Seeds",
+  "item.horde-resource-crops.vanilla.seed_earth": "Earth Seeds",
+  "item.horde-resource-crops.vanilla.seed_fire": "Fire Seeds",
+  "item.horde-resource-crops.vanilla.seed_water": "Water Seeds",
+  "item.horde-resource-crops.vanilla.seed_dirt": "Dirt Seeds",
+  "item.horde-resource-crops.vanilla.seed_ice": "Ice Seeds",
+  "item.horde-resource-crops.vanilla.seed_stone": "Stone Seeds",
+  "item.horde-resource-crops.vanilla.seed_amethyst": "Amethyst Seeds",
+  "item.horde-resource-crops.vanilla.seed_chicken": "Chicken Seeds",
+  "item.horde-resource-crops.vanilla.seed_coal": "Coal Seeds",
+  "item.horde-resource-crops.vanilla.seed_copper": "Copper Seeds",
+  "item.horde-resource-crops.vanilla.seed_cow": "Cow Seeds",
+  "item.horde-resource-crops.vanilla.seed_fish": "Fish Seeds",
+  "item.horde-resource-crops.vanilla.seed_iron": "Iron Seeds",
+  "item.horde-resource-crops.vanilla.seed_pig": "Pig Seeds",
+  "item.horde-resource-crops.vanilla.seed_coral": "Coral Seeds",
+  "item.horde-resource-crops.vanilla.seed_creeper": "Creeper Seeds",
+  "item.horde-resource-crops.vanilla.seed_honey": "Honey Seeds",
+  "item.horde-resource-crops.vanilla.seed_lapis": "Lapis Lazuli Seeds",
+  "item.horde-resource-crops.vanilla.seed_rabbit": "Rabbit Seeds",
+  "item.horde-resource-crops.vanilla.seed_sheep": "Sheep Seeds",
+  "item.horde-resource-crops.vanilla.seed_skeleton": "Skeleton Seeds",
+  "item.horde-resource-crops.vanilla.seed_slime": "Slime Seeds",
+  "item.horde-resource-crops.vanilla.seed_spider": "Spider Seeds",
+  "item.horde-resource-crops.vanilla.seed_squid": "Squid Seeds",
+  "item.horde-resource-crops.vanilla.seed_turtle": "Turtle Seeds",
+  "item.horde-resource-crops.vanilla.seed_zombie": "Zombie Seeds",
+  "item.horde-resource-crops.vanilla.seed_dye": "Dye Seeds",
+  "item.horde-resource-crops.vanilla.seed_emerald": "Emerald Seeds",
+  "item.horde-resource-crops.vanilla.seed_enderman": "Enderman Seeds",
+  "item.horde-resource-crops.vanilla.seed_experience": "Experience Seeds",
+  "item.horde-resource-crops.vanilla.seed_gold": "Gold Seeds",
+  "item.horde-resource-crops.vanilla.seed_nature": "Nature Seeds",
+  "item.horde-resource-crops.vanilla.seed_obsidian": "Obsidian Seeds",
+  "item.horde-resource-crops.vanilla.seed_prismarine": "Prismarine Seeds",
+  "item.horde-resource-crops.vanilla.seed_redstone": "Redstone Seeds",
+  "item.horde-resource-crops.vanilla.seed_blaze": "Blaze Seeds",
+  "item.horde-resource-crops.vanilla.seed_diamond": "Diamond Seeds",
+  "item.horde-resource-crops.vanilla.seed_end": "End Seeds",
+  "item.horde-resource-crops.vanilla.seed_ghast": "Ghast Seeds",
+  "item.horde-resource-crops.vanilla.seed_glowstone": "Glowstone Seeds",
+  "item.horde-resource-crops.vanilla.seed_nether": "Nether Seeds",
+  "item.horde-resource-crops.vanilla.seed_wither_skeleton": "Wither Skeleton Seeds",
+  "item.horde-resource-crops.vanilla.seed_dragon_egg": "Dragon Egg Seeds",
+  "item.horde-resource-crops.vanilla.seed_nether_star": "Nether_Star Seeds",
+  "item.horde-resource-crops.vanilla.seed_netherite": "Netherite Seeds",
+  "item.horde-resource-crops.vanilla.seed_shulker": "Shulker Seeds"
 }
