--- a/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/resourcecrops/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.horde-resource-crops.other.catalyst": "Catalyst",
   "item.horde-resource-crops.other.bloodstone": "Bloodstone",
   "item.horde-resource-crops.other.rhodonite": "Rhodonite",
+  "item.horde-resource-crops.vanilla.seed_rhodonite": "Rhodonite Seeds",
   "item.horde-resource-crops.other.aventurine": "Aventurine",
   "item.horde-resource-crops.other.aragonite": "Aragonite",
   "item.horde-resource-crops.other.spinel": "Spinel",
@@ -11,7 +12,6 @@
   "item.horde-resource-crops.other.shard_nether_star": "Nether Star Shard",
   "item.horde-resource-crops.dragonstone_overworld": "Dragonstone",
   "item.horde-resource-crops.raw_dragonstone_overworld": "Raw Dragonstone",
-  "item.horde-resource-crops.raw_dragonstone_deepslate": "Raw Dragonstone",
   "item.horde-resource-crops.dragonstone_nether": "Dragonstone",
   "item.horde-resource-crops.raw_dragonstone_nether": "Raw Dragonstone",
   "item.horde-resource-crops.dragonstone_end": "Dragonstone",
@@ -24,6 +24,7 @@
   "item.horde-resource-crops.vanilla.essence_dirt": "Dirt Essence",
   "item.horde-resource-crops.vanilla.essence_ice": "Ice Essence",
   "item.horde-resource-crops.vanilla.essence_stone": "Stone Essence",
+  "item.horde-resource-crops.vanilla.essence_wood": "Wood Essence",
   "item.horde-resource-crops.vanilla.essence_amethyst": "Amethyst Essence",
   "item.horde-resource-crops.vanilla.essence_chicken": "Chicken Essence",
   "item.horde-resource-crops.vanilla.essence_coal": "Coal Essence",
@@ -59,9 +60,10 @@
   "item.horde-resource-crops.vanilla.essence_ghast": "Ghast Essence",
   "item.horde-resource-crops.vanilla.essence_glowstone": "Glowstone Essence",
   "item.horde-resource-crops.vanilla.essence_nether": "Nether Essence",
+  "item.horde-resource-crops.vanilla.essence_nether_quartz": "Nether Quartz Essence",
   "item.horde-resource-crops.vanilla.essence_wither_skeleton": "Wither Skeleton Essence",
   "item.horde-resource-crops.vanilla.essence_dragon_egg": "Dragon Egg Essence",
-  "item.horde-resource-crops.vanilla.essence_nether_star": "Nether_Star Essence",
+  "item.horde-resource-crops.vanilla.essence_nether_star": "Nether Star Essence",
   "item.horde-resource-crops.vanilla.essence_netherite": "Netherite Essence",
   "item.horde-resource-crops.vanilla.essence_shulker": "Shulker Essence",
   "item.horde-resource-crops.vanilla.seed_air": "Air Seeds",
@@ -71,6 +73,7 @@
   "item.horde-resource-crops.vanilla.seed_dirt": "Dirt Seeds",
   "item.horde-resource-crops.vanilla.seed_ice": "Ice Seeds",
   "item.horde-resource-crops.vanilla.seed_stone": "Stone Seeds",
+  "item.horde-resource-crops.vanilla.seed_wood": "Wood Seeds",
   "item.horde-resource-crops.vanilla.seed_amethyst": "Amethyst Seeds",
   "item.horde-resource-crops.vanilla.seed_chicken": "Chicken Seeds",
   "item.horde-resource-crops.vanilla.seed_coal": "Coal Seeds",
@@ -106,9 +109,24 @@
   "item.horde-resource-crops.vanilla.seed_ghast": "Ghast Seeds",
   "item.horde-resource-crops.vanilla.seed_glowstone": "Glowstone Seeds",
   "item.horde-resource-crops.vanilla.seed_nether": "Nether Seeds",
+  "item.horde-resource-crops.vanilla.seed_nether_quartz": "Nether Quartz Seeds",
   "item.horde-resource-crops.vanilla.seed_wither_skeleton": "Wither Skeleton Seeds",
   "item.horde-resource-crops.vanilla.seed_dragon_egg": "Dragon Egg Seeds",
-  "item.horde-resource-crops.vanilla.seed_nether_star": "Nether_Star Seeds",
+  "item.horde-resource-crops.vanilla.seed_nether_star": "Nether Star Seeds",
   "item.horde-resource-crops.vanilla.seed_netherite": "Netherite Seeds",
-  "item.horde-resource-crops.vanilla.seed_shulker": "Shulker Seeds"
+  "item.horde-resource-crops.vanilla.seed_shulker": "Shulker Seeds",
+  "item.horde-resource-crops.vanilla.mix_chicken": "Chicken Mix",
+  "item.horde-resource-crops.vanilla.mix_cow": "Cow Mix",
+  "item.horde-resource-crops.vanilla.mix_dye": "Dye Mix",
+  "item.horde-resource-crops.vanilla.mix_fish": "Fish Mix",
+  "item.horde-resource-crops.vanilla.mix_pig": "Pig Mix",
+  "item.horde-resource-crops.vanilla.mix_coral": "Coral Mix",
+  "item.horde-resource-crops.vanilla.mix_creeper": "Creeper Mix",
+  "item.horde-resource-crops.vanilla.mix_rabbit": "Rabbit Mix",
+  "item.horde-resource-crops.vanilla.mix_sheep": "Sheep Mix",
+  "item.horde-resource-crops.vanilla.mix_skeleton": "Skeleton Mix",
+  "item.horde-resource-crops.vanilla.mix_slime": "Slime Mix",
+  "item.horde-resource-crops.vanilla.mix_spider": "Spider Mix",
+  "item.horde-resource-crops.vanilla.mix_turtle": "Turtle Mix",
+  "item.horde-resource-crops.vanilla.mix_zombie": "Zombie Mix"
 }
