--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -10,13 +10,13 @@
   "item.horde-resource-crops.other.chaorite": "Chaorite",
   "item.horde-resource-crops.other.shard_dragon_egg": "Dragon Egg Shard",
   "item.horde-resource-crops.other.shard_nether_star": "Nether Star Shard",
-  "item.horde-resource-crops.dragonstone_overworld": "Dragonstone",
-  "item.horde-resource-crops.raw_dragonstone_overworld": "Raw Dragonstone",
-  "item.horde-resource-crops.dragonstone_nether": "Dragonstone",
-  "item.horde-resource-crops.raw_dragonstone_nether": "Raw Dragonstone",
-  "item.horde-resource-crops.dragonstone_end": "Dragonstone",
-  "item.horde-resource-crops.raw_dragonstone_end": "Raw Dragonstone",
-  "item.horde-resource-crops.vanilla.essence_rhodonite": "Raw Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
+  "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_nether": "Dragonstone",
+  "item.horde-resource-crops.ores.raw_dragonstone_nether": "Raw Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_end": "Dragonstone",
+  "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw Dragonstone",
+  "item.horde-resource-crops.vanilla.essence_rhodonite": "Rhodonite",
   "item.horde-resource-crops.vanilla.essence_air": "Air Essence",
   "item.horde-resource-crops.vanilla.essence_earth": "Earth Essence",
   "item.horde-resource-crops.vanilla.essence_fire": "Fire Essence",
