--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -1,15 +1,15 @@
 {
-  "item.horde-resource-crops.other.catalyst": "Catalyst",
-  "item.horde-resource-crops.other.bloodstone": "Bloodstone",
-  "item.horde-resource-crops.other.rhodonite": "Rhodonite",
+  "item.horde-resource-crops.gemstones.catalyst": "Catalyst",
+  "item.horde-resource-crops.gemstones.bloodstone": "Bloodstone",
+  "item.horde-resource-crops.gemstones.rhodonite": "Rhodonite",
   "item.horde-resource-crops.vanilla.seed_rhodonite": "Rhodonite Seeds",
-  "item.horde-resource-crops.other.aventurine": "Aventurine",
-  "item.horde-resource-crops.other.aragonite": "Aragonite",
-  "item.horde-resource-crops.other.spinel": "Spinel",
-  "item.horde-resource-crops.other.larimar": "Larimar",
-  "item.horde-resource-crops.other.chaorite": "Chaorite",
-  "item.horde-resource-crops.other.shard_dragon_egg": "Dragon Egg Shard",
-  "item.horde-resource-crops.other.shard_nether_star": "Nether Star Shard",
+  "item.horde-resource-crops.gemstones.aventurine": "Aventurine",
+  "item.horde-resource-crops.gemstones.aragonite": "Aragonite",
+  "item.horde-resource-crops.gemstones.spinel": "Spinel",
+  "item.horde-resource-crops.gemstones.larimar": "Larimar",
+  "item.horde-resource-crops.gemstones.chaorite": "Chaorite",
+  "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
+  "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
   "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
   "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_nether": "Dragonstone",
