--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -11,10 +11,14 @@
   "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
   "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
   "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
+  "block.horde-resource-crops.ores.dragonstone_overworld_ore": "Dragonstone Ore",
+  "block.horde-resource-crops.ores.dragonstone_deepslate_ore": "Dragonstone Ore",
   "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_nether": "Dragonstone",
+  "block.horde-resource-crops.ores.dragonstone_nether_ore": "Dragonstone Ore",
   "item.horde-resource-crops.ores.raw_dragonstone_nether": "Raw Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_end": "Dragonstone",
+  "block.horde-resource-crops.ores.dragonstone_end_ore": "Dragonstone Ore",
   "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw Dragonstone",
   "item.horde-resource-crops.vanilla.essence_rhodonite": "Rhodonite",
   "item.horde-resource-crops.vanilla.essence_air": "Air Essence",
