loot tables, item groups and tags

--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -1,4 +1,8 @@
 {
+  "itemGroup.horde-resource-crops.ores": "Kobold Ores",
+  "itemGroup.horde-resource-crops.essence": "Essences",
+  "itemGroup.horde-resource-crops.seeds": "Essence Seeds",
+  "itemGroup.horde-resource-crops.misc": "Shale's Misc Drawer",
   "item.horde-resource-crops.gemstones.catalyst": "Catalyst",
   "item.horde-resource-crops.gemstones.bloodstone": "Bloodstone",
   "item.horde-resource-crops.gemstones.rhodonite": "Rhodonite",
@@ -20,11 +24,18 @@
   "item.horde-resource-crops.ores.dragonstone_end": "Dragonstone",
   "block.horde-resource-crops.ores.dragonstone_end_ore": "Dragonstone Ore",
   "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw Dragonstone",
-  "item.horde-resource-crops.vanilla.essence_rhodonite": "Rhodonite",
+  "item.horde-resource-crops.ores.raw_rhodonite": "Raw Rhodonite",
+  "block.horde-resource-crops.ores.rhodonite_overworld_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_deepslate_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_nether_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_end_ore": "Rhodonite Ore",
+  "item.horde-resource-crops.other.blank_disc": "Blank Disc",
+  "item.horde-resource-crops.other.withered_bone": "Withered Bone",
   "item.horde-resource-crops.vanilla.essence_air": "Air Essence",
   "item.horde-resource-crops.vanilla.essence_earth": "Earth Essence",
   "item.horde-resource-crops.vanilla.essence_fire": "Fire Essence",
   "item.horde-resource-crops.vanilla.essence_water": "Water Essence",
+  "item.horde-resource-crops.vanilla.essence_deepslate": "Deepslate Essence",
   "item.horde-resource-crops.vanilla.essence_dirt": "Dirt Essence",
   "item.horde-resource-crops.vanilla.essence_ice": "Ice Essence",
   "item.horde-resource-crops.vanilla.essence_stone": "Stone Essence",
@@ -74,6 +85,7 @@
   "item.horde-resource-crops.vanilla.seed_earth": "Earth Seeds",
   "item.horde-resource-crops.vanilla.seed_fire": "Fire Seeds",
   "item.horde-resource-crops.vanilla.seed_water": "Water Seeds",
+  "item.horde-resource-crops.vanilla.seed_deepslate": "Deepslate Seeds",
   "item.horde-resource-crops.vanilla.seed_dirt": "Dirt Seeds",
   "item.horde-resource-crops.vanilla.seed_ice": "Ice Seeds",
   "item.horde-resource-crops.vanilla.seed_stone": "Stone Seeds",
@@ -132,5 +144,11 @@
   "item.horde-resource-crops.vanilla.mix_slime": "Slime Mix",
   "item.horde-resource-crops.vanilla.mix_spider": "Spider Mix",
   "item.horde-resource-crops.vanilla.mix_turtle": "Turtle Mix",
-  "item.horde-resource-crops.vanilla.mix_zombie": "Zombie Mix"
+  "item.horde-resource-crops.vanilla.mix_zombie": "Zombie Mix",
+  "item.horde-resource-crops.vanilla.mix_enderman": "Enderman Mix",
+  "item.horde-resource-crops.vanilla.mix_nature": "Nature Mix",
+  "item.horde-resource-crops.vanilla.mix_blaze": "Blaze Mix",
+  "item.horde-resource-crops.vanilla.mix_ghast": "Ghast Mix",
+  "item.horde-resource-crops.vanilla.mix_wither_skeleton": "Wither Mix",
+  "item.horde-resource-crops.vanilla.mix_shulker": "Shulker Mix"
 }
