--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -1,86 +1,15 @@
 {
-  "itemGroup.horde-resource-crops.ores": "Kobold Ores",
-  "itemGroup.horde-resource-crops.essence": "Essences",
-  "itemGroup.horde-resource-crops.seeds": "Essence Seeds",
-  "itemGroup.horde-resource-crops.misc": "Shale's Misc Drawer",
-  "item.horde-resource-crops.gemstones.catalyst": "Catalyst",
-  "item.horde-resource-crops.gemstones.bloodstone": "Bloodstone",
-  "item.horde-resource-crops.gemstones.rhodonite": "Rhodonite",
+  "comment0": "Tabs",
+  "itemGroup.horde-resource-crops.ore": "Horded Shinies",
+  "itemGroup.horde-resource-crops.essence": "Unearthed Essences",
+  "itemGroup.horde-resource-crops.seed": "Special Seeds",
+  "itemGroup.horde-resource-crops.misc": "Scrapbox",
+  "comment1": "Seeds",
+  "item.horde-resource-crops.vanilla.seed_bismuth": "Bismuth Seeds",
+  "item.horde-resource-crops.vanilla.seed_dragonstone_overworld": "Dragonstone Seeds",
+  "item.horde-resource-crops.vanilla.seed_dragonstone_nether": "Nether Dragonstone Seeds",
+  "item.horde-resource-crops.vanilla.seed_dragonstone_end": "End Dragonstone Seeds",
   "item.horde-resource-crops.vanilla.seed_rhodonite": "Rhodonite Seeds",
-  "item.horde-resource-crops.gemstones.aventurine": "Aventurine",
-  "item.horde-resource-crops.gemstones.aragonite": "Aragonite",
-  "item.horde-resource-crops.gemstones.spinel": "Spinel",
-  "item.horde-resource-crops.gemstones.larimar": "Larimar",
-  "item.horde-resource-crops.gemstones.chaorite": "Chaorite",
-  "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
-  "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
-  "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
-  "block.horde-resource-crops.ores.dragonstone_overworld_ore": "Dragonstone Ore",
-  "block.horde-resource-crops.ores.dragonstone_deepslate_ore": "Dragonstone Ore",
-  "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
-  "item.horde-resource-crops.ores.dragonstone_nether": "Dragonstone",
-  "block.horde-resource-crops.ores.dragonstone_nether_ore": "Dragonstone Ore",
-  "item.horde-resource-crops.ores.raw_dragonstone_nether": "Raw Dragonstone",
-  "item.horde-resource-crops.ores.dragonstone_end": "Dragonstone",
-  "block.horde-resource-crops.ores.dragonstone_end_ore": "Dragonstone Ore",
-  "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw Dragonstone",
-  "item.horde-resource-crops.ores.raw_rhodonite": "Raw Rhodonite",
-  "block.horde-resource-crops.ores.rhodonite_overworld_ore": "Rhodonite Ore",
-  "block.horde-resource-crops.ores.rhodonite_deepslate_ore": "Rhodonite Ore",
-  "block.horde-resource-crops.ores.rhodonite_nether_ore": "Rhodonite Ore",
-  "block.horde-resource-crops.ores.rhodonite_end_ore": "Rhodonite Ore",
-  "item.horde-resource-crops.other.blank_disc": "Blank Disc",
-  "item.horde-resource-crops.other.withered_bone": "Withered Bone",
-  "item.horde-resource-crops.vanilla.essence_air": "Air Essence",
-  "item.horde-resource-crops.vanilla.essence_earth": "Earth Essence",
-  "item.horde-resource-crops.vanilla.essence_fire": "Fire Essence",
-  "item.horde-resource-crops.vanilla.essence_water": "Water Essence",
-  "item.horde-resource-crops.vanilla.essence_deepslate": "Deepslate Essence",
-  "item.horde-resource-crops.vanilla.essence_dirt": "Dirt Essence",
-  "item.horde-resource-crops.vanilla.essence_ice": "Ice Essence",
-  "item.horde-resource-crops.vanilla.essence_stone": "Stone Essence",
-  "item.horde-resource-crops.vanilla.essence_wood": "Wood Essence",
-  "item.horde-resource-crops.vanilla.essence_amethyst": "Amethyst Essence",
-  "item.horde-resource-crops.vanilla.essence_chicken": "Chicken Essence",
-  "item.horde-resource-crops.vanilla.essence_coal": "Coal Essence",
-  "item.horde-resource-crops.vanilla.essence_copper": "Copper Essence",
-  "item.horde-resource-crops.vanilla.essence_cow": "Cow Essence",
-  "item.horde-resource-crops.vanilla.essence_fish": "Fish Essence",
-  "item.horde-resource-crops.vanilla.essence_iron": "Iron Essence",
-  "item.horde-resource-crops.vanilla.essence_pig": "Pig Essence",
-  "item.horde-resource-crops.vanilla.essence_coral": "Coral Essence",
-  "item.horde-resource-crops.vanilla.essence_creeper": "Creeper Essence",
-  "item.horde-resource-crops.vanilla.essence_honey": "Honey Essence",
-  "item.horde-resource-crops.vanilla.essence_lapis": "Lapis Lazuli Essence",
-  "item.horde-resource-crops.vanilla.essence_rabbit": "Rabbit Essence",
-  "item.horde-resource-crops.vanilla.essence_sheep": "Sheep Essence",
-  "item.horde-resource-crops.vanilla.essence_skeleton": "Skeleton Essence",
-  "item.horde-resource-crops.vanilla.essence_slime": "Slime Essence",
-  "item.horde-resource-crops.vanilla.essence_spider": "Spider Essence",
-  "item.horde-resource-crops.vanilla.essence_squid": "Squid Essence",
-  "item.horde-resource-crops.vanilla.essence_turtle": "Turtle Essence",
-  "item.horde-resource-crops.vanilla.essence_zombie": "Zombie Essence",
-  "item.horde-resource-crops.vanilla.essence_dye": "Dye Essence",
-  "item.horde-resource-crops.vanilla.essence_emerald": "Emerald Essence",
-  "item.horde-resource-crops.vanilla.essence_enderman": "Enderman Essence",
-  "item.horde-resource-crops.vanilla.essence_experience": "Experience Essence",
-  "item.horde-resource-crops.vanilla.essence_gold": "Gold Essence",
-  "item.horde-resource-crops.vanilla.essence_nature": "Nature Essence",
-  "item.horde-resource-crops.vanilla.essence_obsidian": "Obsidian Essence",
-  "item.horde-resource-crops.vanilla.essence_prismarine": "Prismarine Essence",
-  "item.horde-resource-crops.vanilla.essence_redstone": "Redstone Essence",
-  "item.horde-resource-crops.vanilla.essence_blaze": "Blaze Essence",
-  "item.horde-resource-crops.vanilla.essence_diamond": "Diamond Essence",
-  "item.horde-resource-crops.vanilla.essence_end": "End Essence",
-  "item.horde-resource-crops.vanilla.essence_ghast": "Ghast Essence",
-  "item.horde-resource-crops.vanilla.essence_glowstone": "Glowstone Essence",
-  "item.horde-resource-crops.vanilla.essence_nether": "Nether Essence",
-  "item.horde-resource-crops.vanilla.essence_nether_quartz": "Nether Quartz Essence",
-  "item.horde-resource-crops.vanilla.essence_wither_skeleton": "Wither Skeleton Essence",
-  "item.horde-resource-crops.vanilla.essence_dragon_egg": "Dragon Egg Essence",
-  "item.horde-resource-crops.vanilla.essence_nether_star": "Nether Star Essence",
-  "item.horde-resource-crops.vanilla.essence_netherite": "Netherite Essence",
-  "item.horde-resource-crops.vanilla.essence_shulker": "Shulker Essence",
   "item.horde-resource-crops.vanilla.seed_air": "Air Seeds",
   "item.horde-resource-crops.vanilla.seed_earth": "Earth Seeds",
   "item.horde-resource-crops.vanilla.seed_fire": "Fire Seeds",
@@ -131,12 +60,68 @@
   "item.horde-resource-crops.vanilla.seed_nether_star": "Nether Star Seeds",
   "item.horde-resource-crops.vanilla.seed_netherite": "Netherite Seeds",
   "item.horde-resource-crops.vanilla.seed_shulker": "Shulker Seeds",
+  "comment2": "Essence",
+  "item.horde-resource-crops.vanilla.essence_bismuth": "Bismuth Essences",
+  "item.horde-resource-crops.vanilla.essence_dragonstone_overworld": "Dragonstone Essences",
+  "item.horde-resource-crops.vanilla.essence_dragonstone_nether": "Nether Dragonstone Essences",
+  "item.horde-resource-crops.vanilla.essence_dragonstone_end": "End Dragonstone Essences",
+  "item.horde-resource-crops.vanilla.essence_rhodonite": "Rhodonite Essences",
+  "item.horde-resource-crops.vanilla.essence_air": "Air Essences",
+  "item.horde-resource-crops.vanilla.essence_earth": "Earth Essences",
+  "item.horde-resource-crops.vanilla.essence_fire": "Fire Essences",
+  "item.horde-resource-crops.vanilla.essence_water": "Water Essences",
+  "item.horde-resource-crops.vanilla.essence_deepslate": "Deepslate Essences",
+  "item.horde-resource-crops.vanilla.essence_dirt": "Dirt Essences",
+  "item.horde-resource-crops.vanilla.essence_ice": "Ice Essences",
+  "item.horde-resource-crops.vanilla.essence_stone": "Stone Essences",
+  "item.horde-resource-crops.vanilla.essence_wood": "Wood Essences",
+  "item.horde-resource-crops.vanilla.essence_amethyst": "Amethyst Essences",
+  "item.horde-resource-crops.vanilla.essence_chicken": "Chicken Essences",
+  "item.horde-resource-crops.vanilla.essence_coal": "Coal Essences",
+  "item.horde-resource-crops.vanilla.essence_copper": "Copper Essences",
+  "item.horde-resource-crops.vanilla.essence_cow": "Cow Essences",
+  "item.horde-resource-crops.vanilla.essence_fish": "Fish Essences",
+  "item.horde-resource-crops.vanilla.essence_iron": "Iron Essences",
+  "item.horde-resource-crops.vanilla.essence_pig": "Pig Essences",
+  "item.horde-resource-crops.vanilla.essence_coral": "Coral Essences",
+  "item.horde-resource-crops.vanilla.essence_creeper": "Creeper Essences",
+  "item.horde-resource-crops.vanilla.essence_honey": "Honey Essences",
+  "item.horde-resource-crops.vanilla.essence_lapis": "Lapis Lazuli Essences",
+  "item.horde-resource-crops.vanilla.essence_rabbit": "Rabbit Essences",
+  "item.horde-resource-crops.vanilla.essence_sheep": "Sheep Essences",
+  "item.horde-resource-crops.vanilla.essence_skeleton": "Skeleton Essences",
+  "item.horde-resource-crops.vanilla.essence_slime": "Slime Essences",
+  "item.horde-resource-crops.vanilla.essence_spider": "Spider Essences",
+  "item.horde-resource-crops.vanilla.essence_squid": "Squid Essences",
+  "item.horde-resource-crops.vanilla.essence_turtle": "Turtle Essences",
+  "item.horde-resource-crops.vanilla.essence_zombie": "Zombie Essences",
+  "item.horde-resource-crops.vanilla.essence_dye": "Dye Essences",
+  "item.horde-resource-crops.vanilla.essence_emerald": "Emerald Essences",
+  "item.horde-resource-crops.vanilla.essence_enderman": "Enderman Essences",
+  "item.horde-resource-crops.vanilla.essence_experience": "Experience Essences",
+  "item.horde-resource-crops.vanilla.essence_gold": "Gold Essences",
+  "item.horde-resource-crops.vanilla.essence_nature": "Nature Essences",
+  "item.horde-resource-crops.vanilla.essence_obsidian": "Obsidian Essences",
+  "item.horde-resource-crops.vanilla.essence_prismarine": "Prismarine Essences",
+  "item.horde-resource-crops.vanilla.essence_redstone": "Redstone Essences",
+  "item.horde-resource-crops.vanilla.essence_blaze": "Blaze Essences",
+  "item.horde-resource-crops.vanilla.essence_diamond": "Diamond Essences",
+  "item.horde-resource-crops.vanilla.essence_end": "End Essences",
+  "item.horde-resource-crops.vanilla.essence_ghast": "Ghast Essences",
+  "item.horde-resource-crops.vanilla.essence_glowstone": "Glowstone Essences",
+  "item.horde-resource-crops.vanilla.essence_nether": "Nether Essences",
+  "item.horde-resource-crops.vanilla.essence_nether_quartz": "Nether Quartz Essences",
+  "item.horde-resource-crops.vanilla.essence_wither_skeleton": "Wither Skeleton Essences",
+  "item.horde-resource-crops.vanilla.essence_dragon_egg": "Dragon Egg Essences",
+  "item.horde-resource-crops.vanilla.essence_nether_star": "Nether Star Essences",
+  "item.horde-resource-crops.vanilla.essence_netherite": "Netherite Essences",
+  "item.horde-resource-crops.vanilla.essence_shulker": "Shulker Essences",
+  "comment3": "Mixes",
   "item.horde-resource-crops.vanilla.mix_chicken": "Chicken Mix",
   "item.horde-resource-crops.vanilla.mix_cow": "Cow Mix",
-  "item.horde-resource-crops.vanilla.mix_dye": "Dye Mix",
+  "item.horde-resource-crops.vanilla.mix_enderman": "Enderman Mix",
   "item.horde-resource-crops.vanilla.mix_fish": "Fish Mix",
   "item.horde-resource-crops.vanilla.mix_pig": "Pig Mix",
-  "item.horde-resource-crops.vanilla.mix_coral": "Coral Mix",
   "item.horde-resource-crops.vanilla.mix_creeper": "Creeper Mix",
   "item.horde-resource-crops.vanilla.mix_rabbit": "Rabbit Mix",
   "item.horde-resource-crops.vanilla.mix_sheep": "Sheep Mix",
@@ -145,10 +130,56 @@
   "item.horde-resource-crops.vanilla.mix_spider": "Spider Mix",
   "item.horde-resource-crops.vanilla.mix_turtle": "Turtle Mix",
   "item.horde-resource-crops.vanilla.mix_zombie": "Zombie Mix",
-  "item.horde-resource-crops.vanilla.mix_enderman": "Enderman Mix",
   "item.horde-resource-crops.vanilla.mix_nature": "Nature Mix",
   "item.horde-resource-crops.vanilla.mix_blaze": "Blaze Mix",
   "item.horde-resource-crops.vanilla.mix_ghast": "Ghast Mix",
   "item.horde-resource-crops.vanilla.mix_wither_skeleton": "Wither Mix",
-  "item.horde-resource-crops.vanilla.mix_shulker": "Shulker Mix"
+  "item.horde-resource-crops.vanilla.mix_shulker": "Shulker Mix",
+  "comment4": "Ore",
+  "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
+  "item.horde-resource-crops.gemstones.dragonstone_overworld_diamond": "Dragonstone Gem",
+  "block.horde-resource-crops.ores.dragonstone_overworld_ore": "Dragonstone Ore",
+  "block.horde-resource-crops.ores.dragonstone_deepslate_ore": "Dragonstone Ore",
+  "item.horde-resource-crops.ores.raw_dragonstone_nether": "Raw Nether Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_nether": "Nether Dragonstone",
+  "item.horde-resource-crops.gemstones.dragonstone_nether_diamond": "Nether Dragonstone Gem",
+  "block.horde-resource-crops.ores.dragonstone_nether_ore": "Nether Dragonstone Ore",
+  "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw End Dragonstone",
+  "item.horde-resource-crops.ores.dragonstone_end": "End Dragonstone",
+  "item.horde-resource-crops.gemstones.dragonstone_end_diamond": "End Dragonstone Gem",
+  "block.horde-resource-crops.ores.dragonstone_end_ore": "End Dragonstone Ore",
+  "item.horde-resource-crops.ores.raw_bismuth": "Raw Bismuth",
+  "item.horde-resource-crops.ores.bismuth": "Bismuth",
+  "item.horde-resource-crops.gemstones.bismuth_diamond": "Bismuth Gem",
+  "block.horde-resource-crops.ores.bismuth_basalt": "Bismuth Ore",
+  "block.horde-resource-crops.ores.bismuth_blackstone": "Bismuth Ore",
+  "item.horde-resource-crops.ores.raw_rhodonite": "Raw Rhodonite",
+  "item.horde-resource-crops.gemstones.rhodonite": "Rhodonite",
+  "item.horde-resource-crops.gemstones.rhodonite_diamond": "Rhodonite Gem",
+  "block.horde-resource-crops.ores.rhodonite_overworld_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_deepslate_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_nether_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.ores.rhodonite_end_ore": "Rhodonite Ore",
+  "item.horde-resource-crops.gemstones.bloodstone": "Bloodstone",
+  "item.horde-resource-crops.gemstones.bloodstone_diamond": "Bloodstone Gem",
+  "item.horde-resource-crops.gemstones.aventurine": "Aventurine",
+  "item.horde-resource-crops.gemstones.aventurine_diamond": "Aventurine Gem",
+  "item.horde-resource-crops.gemstones.aragonite": "Aragonite",
+  "item.horde-resource-crops.gemstones.aragonite_diamond": "Aragonite Gem",
+  "item.horde-resource-crops.gemstones.spinel": "Spinel",
+  "item.horde-resource-crops.gemstones.spinel_diamond": "Spinel Gem",
+  "item.horde-resource-crops.gemstones.larimar": "Larimar",
+  "item.horde-resource-crops.gemstones.larimar_diamond": "Larimar Gem",
+  "item.horde-resource-crops.gemstones.chaorite": "Chaorite",
+  "item.horde-resource-crops.gemstones.chaorite_diamond": "Chaorite Gem",
+  "comment5": "Shards",
+  "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
+  "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
+  "comment6": "Catalysts",
+  "item.horde-resource-crops.gemstones.rhodonite_catalyst": "Rhodonite Catalyst",
+  "item.horde-resource-crops.gemstones.larimar_catalyst": "Larimar Catalyst",
+  "comment7": "Extras",
+  "item.horde-resource-crops.other.withered_bone": "Withered Bone",
+  "item.horde-resource-crops.other.blank_disc": "Blank Disc"
 }
